standard view templates, no validation, no images

--- a/MyBase.WEB/MyBase.WEB.csproj
+++ b/MyBase.WEB/MyBase.WEB.csproj
@@ -190,6 +190,7 @@
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Home\EditNew.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
