--- a/MyBase.DAL/MyBase.DAL.csproj
+++ b/MyBase.DAL/MyBase.DAL.csproj
@@ -53,18 +53,22 @@
     <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\Picture.cs" />
     <Compile Include="Entities\User.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\IUserRepository.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IUserRepository.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="Migrations\201902231327217_AddPictureTable.cs" />
     <Compile Include="Migrations\201902231327217_AddPictureTable.Designer.cs">
       <DependentUpon>201902231327217_AddPictureTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903101706450_AddIsDeleted.cs" />
+    <Compile Include="Migrations\201903101706450_AddIsDeleted.Designer.cs">
+      <DependentUpon>201903101706450_AddIsDeleted.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ContactRepository.cs" />
     <Compile Include="Repositories\PictureRepository.cs" />
-    <Compile Include="Repositories\UnitOfWork.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +78,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902231327217_AddPictureTable.resx">
       <DependentUpon>201902231327217_AddPictureTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903101706450_AddIsDeleted.resx">
+      <DependentUpon>201903101706450_AddIsDeleted.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
