--- a/MyBase.DAL/MyBase.DAL.csproj
+++ b/MyBase.DAL/MyBase.DAL.csproj
@@ -50,12 +50,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\ApplicationContext.cs" />
-    <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\Picture.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Migrations\201904100210114_DeleteContactTable.cs" />
+    <Compile Include="Migrations\201904100210114_DeleteContactTable.Designer.cs">
+      <DependentUpon>201904100210114_DeleteContactTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
     <Compile Include="Repositories\Interfaces\IUserRepository.cs" />
-    <Compile Include="Specifications\BaseSpecification.cs" />
     <Compile Include="Specifications\Interfaces\ISpecification.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="Migrations\201902231327217_AddPictureTable.cs" />
@@ -68,7 +70,6 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ContactRepository.cs" />
     <Compile Include="Repositories\PictureRepository.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
@@ -83,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903101706450_AddIsDeleted.resx">
       <DependentUpon>201903101706450_AddIsDeleted.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904100210114_DeleteContactTable.resx">
+      <DependentUpon>201904100210114_DeleteContactTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
