--- a/MyBase.BLL/packages.config
+++ b/MyBase.BLL/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentValidation" version="8.2.2" targetFramework="net461" />
   <package id="Ninject" version="3.3.3" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
 </packages>
