--- a/MyBase.WEB/packages.config
+++ b/MyBase.WEB/packages.config
@@ -24,6 +24,9 @@
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net461" />
+  <package id="Ninject.WebApi.DependencyResolver" version="0.1.4758.24814" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
