--- a/MyBase.BLL/MyBase.BLL.csproj
+++ b/MyBase.BLL/MyBase.BLL.csproj
@@ -62,13 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Infrastructure\AutoMapperProfileBLL.cs" />
+    <Compile Include="Infrastructure\AutoMapperProfile.cs" />
     <Compile Include="Infrastructure\MapperExtension.cs" />
     <Compile Include="Services\UserService\TableGenerators\DataTableGenerator.cs" />
-    <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="Dto\UserDto.cs" />
     <Compile Include="Infrastructure\ConfigurationManager.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
-    <Compile Include="Services\UserService\Validators\UserValidator.cs" />
+    <Compile Include="Services\UserService\Validators\UserDtoValidator.cs" />
     <Compile Include="Services\UserService\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UserService\UserService.cs" />
