--- a/MyBase.BLL.Tests/packages.config
+++ b/MyBase.BLL.Tests/packages.config
@@ -4,7 +4,9 @@
   <package id="AutoMapper" version="8.0.0" targetFramework="net471" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
   <package id="Fare" version="2.1.1" targetFramework="net471" />
+  <package id="FluentValidation" version="8.2.3" targetFramework="net471" />
   <package id="Moq" version="4.10.1" targetFramework="net471" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
