--- a/MyBase.BLL.Tests/MyBase.BLL.Tests.csproj
+++ b/MyBase.BLL.Tests/MyBase.BLL.Tests.csproj
@@ -91,6 +91,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UserDtoValidatorTests.cs" />
     <Compile Include="UserServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
